# cub3dpp

./: .clangd  .gitignore  CMakeLists.txt  Makefile  Readme.md
include/: map.h  player.h  renderer.h
src/: main.cpp  map.cpp  player.cpp  renderer.cpp
